@@ -6,6 +6,7 @@ Version 4.0.4 (02-16-12)
 -Adjustment to Foundation JS calls to fix further plugin conflicts.
 -Fix for post thumbs not displaying in IE8.
 -Added Layout options.
+-Minor Theme Options copy adjustments.
 
 Version 4.0.3 (02-13-12)
 -Added NivoSlider option.
